--- a/package.json
+++ b/package.json
@@ -12,25 +12,26 @@
 		"lint": "prettier --check . && eslint ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^3.3.1",
-		"@sveltejs/adapter-vercel": "^5.5.2",
-		"@sveltejs/kit": "^2.15.2",
+		"@sveltejs/adapter-auto": "^4.0.0",
+		"@sveltejs/adapter-vercel": "^5.6.1",
+		"@sveltejs/kit": "^2.17.1",
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
+		"@tailwindcss/vite": "^4.0.4",
 		"@types/eslint": "^9.6.1",
-		"@types/node": "^22.10.6",
+		"@types/node": "^22.13.1",
 		"autoprefixer": "^10.4.20",
-		"eslint": "^9.18.0",
+		"eslint": "^9.19.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^2.46.1",
 		"globals": "^15.14.0",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
-		"prettier-plugin-tailwindcss": "^0.6.9",
-		"svelte": "^5.17.4",
+		"prettier-plugin-tailwindcss": "^0.6.11",
+		"svelte": "^5.19.9",
 		"svelte-check": "^4.1.4",
-		"tailwindcss": "^3.4.17",
+		"tailwindcss": "^4.0.4",
 		"typescript": "^5.7.3",
-		"typescript-eslint": "^8.20.0",
-		"vite": "^6.0.7"
+		"typescript-eslint": "^8.23.0",
+		"vite": "^6.1.0"
 	}
 }
