--- a/package.json
+++ b/package.json
@@ -12,13 +12,12 @@
 		"lint": "prettier --check . && eslint ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-cloudflare": "^7.1.0",
+		"@eslint/compat": "^1.3.1",
+		"@eslint/js": "^9.31.0",
+		"@sveltejs/adapter-auto": "^6.0.1",
 		"@sveltejs/kit": "^2.25.1",
 		"@sveltejs/vite-plugin-svelte": "^6.1.0",
 		"@tailwindcss/vite": "^4.1.11",
-		"@types/eslint": "^9.6.1",
-		"@types/node": "^24.0.15",
-		"autoprefixer": "^10.4.21",
 		"eslint": "^9.31.0",
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-svelte": "^3.11.0",
@@ -32,5 +31,10 @@
 		"typescript": "^5.8.3",
 		"typescript-eslint": "^8.37.0",
 		"vite": "^7.0.5"
+	},
+	"pnpm": {
+		"onlyBuiltDependencies": [
+			"esbuild"
+		]
 	}
 }
