--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@eslint/compat": "^1.4.1",
 		"@eslint/js": "^9.39.1",
 		"@sveltejs/adapter-auto": "^6.1.1",
+		"@sveltejs/adapter-cloudflare": "^7.2.4",
 		"@sveltejs/kit": "^2.49.1",
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
 		"@tailwindcss/vite": "^4.1.17",
