--- a/config/wrangler.jsonc
+++ b/config/wrangler.jsonc
@@ -1,11 +1,11 @@
 {
 	"name": "sveltekit-color-themes",
-	"main": ".svelte-kit/cloudflare/_worker.js",
+	"main": "../.svelte-kit/cloudflare/_worker.js",
 	"compatibility_date": "2025-01-01",
 	"compatibility_flags": ["nodejs_compat"],
 
 	"assets": {
 		"binding": "ASSETS",
-		"directory": ".svelte-kit/cloudflare"
+		"directory": "../.svelte-kit/cloudflare"
 	}
 }
