--- a/config/wrangler.toml
+++ b/config/wrangler.toml
@@ -2,10 +2,10 @@
 name = "sveltekit-color-themes"
 compatibility_date = "2025-12-07"
 
-main = ".svelte-kit/cloudflare/_worker.js"
+main = "../.svelte-kit/cloudflare/_worker.js"
 compatibility_flags = ["nodejs_compat"]
 
 # Bind your static output directory (e.g. the client folder SvelteKit emitted)
 [assets]
 binding = "ASSETS"
-directory = ".svelte-kit/cloudflare"
+directory = "../.svelte-kit/cloudflare"
