--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,10 @@
 engine-strict=true
+
+# save-exact=true	    
+## When you install a new package (npm install some-library), this rule forces the version number in your package.json file to be exact (e.g., 1.2.3), instead of using ranges (like ^1.2.3).
+
+# engine-strict=true	
+## This ensures that the version of Node.js you are using matches the version required in your package.json file. If the versions don't match, npm will stop the installation, which prevents your project from running with an incompatible Node.js version.
+
+# strict-peer-dependencies=true	
+## This tells npm to be very strict about "peer dependencies" (packages a library expects you to have installed). This helps you catch potential version conflicts early.
