--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@eslint/js": "^9.39.1",
 		"@sveltejs/adapter-auto": "^7.0.0",
 		"@sveltejs/adapter-cloudflare": "^7.2.4",
+		"@sveltejs/adapter-netlify": "^5.2.4",
 		"@sveltejs/adapter-vercel": "^6.2.0",
 		"@sveltejs/kit": "^2.49.2",
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
@@ -38,8 +39,5 @@
 		"onlyBuiltDependencies": [
 			"esbuild"
 		]
-	},
-	"dependencies": {
-		"@sveltejs/adapter-netlify": "^5.2.4"
 	}
 }
